modif chine.html

--- a/chine.html
+++ b/chine.html
@@ -53,9 +53,31 @@ Marianne
 			Article 2 !!
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			<img src="/export/src/angele.brevart/Bureau/enfantchine.jpg">
+
+			<h3>La chine assouplit sa règle de l'enfant unique</h3><br>
+
+En votant un nouvel assouplissement, la Chine tente de lutter contre le vieillissement de sa population. La politique de l'enfant unique aurait évité 400 millions de naissance depuis 1979.
+
+La plus haute instance législative chinoise a adopté comme prévu samedi une motion assouplissant nettement la politique de contrôle des naissances. Une réforme promise mi-novembre après une réunion en conclave du Comité central du Parti communiste chinois, tout comme la fin des camps de rééducation par le travail, votée le même jour. 
+
+Le comité permanent de l'ANP a par ailleurs adopté samedi une résolution "pour autoriser les couples dont l'un des membres est enfant unique à avoir deux enfants", enjoignant les autorités provinciales à "amender leurs règlements et à prendre des actions spécifiques" en conséquence. 
+
+Ces nouvelles règles entreront en vigueur "dans certaines provinces et régions" au premier trimestre 2014, avait assuré plus tôt cette semaine un haut responsable de la Commission nationale de la santé et du planning familial. 
+
+La décision marque un net assouplissement de la politique dite de l'enfant unique, mise en oeuvre à partir de 1979 pour freiner l'accroissement démographique dans le pays le plus peuplé du monde. Elle aurait, selon les autorités, permis d'éviter 400 millions de naissances. 
+
+Actuellement, la loi chinoise interdit aux couples d'avoir plus d'un seul enfant, mais des exceptions existent pour les couples dont les deux membres sont enfants uniques, ainsi que pour les minorités ethniques ou les couples ruraux dont le premier enfant était une fille. 
+
+<h3>10 millions de couples concernés</h3>
+
+De fait, la règle de l'enfant unique ne s'applique déjà pas pour environ 37% des couples chinois, selon une étude de 2007, et les couples aisés n'hésitent pas à l'enfreindre, préférant s'acquitter de l'amende. 
+
+L'assouplissement des règles entériné samedi a néanmoins été qualifié de "progrès crucial" par des spécialistes, même s'il pourrait ne concerner qu'environ 10 millions de couples, soit une petite fraction du 1,3 milliard d'habitants du pays. 
+
+Cette modification est ouvertement destinée à enrayer le vieillissement de la population chinoise, alors que le taux de fécondité dans le pays, tombé à 1,5 enfant par femme depuis plus d'une décennie, est très en-deçà du seuil supposé garantir le renouvellement des générations. 
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="http://www.lexpress.fr/actualite/monde/asie/la-chine-assouplit-sa-regle-de-l-enfant-unique_1310404.html">lexpress.fr</a>
 		</h3>
 	</div>
 	<div class="element"> <!-- Julie -->
