--- a/chine.html
+++ b/chine.html
@@ -50,12 +50,10 @@ Marianne
 
 	<div class="element"> <!-- Angele -->
 		<h2>
-			Article 2 !!
+			La chine assouplit sa règle de l'enfant unique
 		</h2>
 		<p>
 			<img src="/export/src/angele.brevart/Bureau/enfantchine.jpg">
-
-			<h3>La chine assouplit sa règle de l'enfant unique</h3><br>
 
 En votant un nouvel assouplissement, la Chine tente de lutter contre le vieillissement de sa population. La politique de l'enfant unique aurait évité 400 millions de naissance depuis 1979.
 
